themes/commons_origins/css/commons_origins-style.css
/* ... */
.views-exposed-widget label {
	display: block;
	padding: 2px 6px;
}

.views-exposed-widget .form-item,
.views-exposed-widget .views-widget {
	margin: 0;
}

.views-exposed-widget .form-item input {
	width: 90%;
}

/* Groups list */

.view-og-all .views-exposed-widget {
	width: 40%;
}

/* views calendar widgets */

.view-content-global-calendar .views-exposed-widget {
	width: 28%;
}


#block-boxes-homepage_info_box, #block-views-groups_featured_groups-block_1, #block-views-group_node-block_1 {
	clear: both;
	padding: 0;
	margin: 0px;
	float: left;
	width: 100%;
}

.block#block-boxes-homepage_info_box .inner, 
.block#block-views-groups_featured_groups-block_1 .inner, 
.block#block-views-group_node-block_1 .inner {
background: url("../images/intro-pane-bg.png") repeat-x scroll 0 0 #FAFAFA;
border: 1px solid #CCC;
border-radius: 10px;
-moz-border-radius: 10px;
-webkit-border-radius: 10px;
padding: 10px;
margin: 0px 10px 10px;
}

/* a fix by Jay (read "Untrained themer") to line up the text in the Latest Notices block on /home */
.view-recent-notices .views-field-name { margin-left: 40px; }


#block-views-group_node-block_1 {
}

 
.block#block-views-group_node-block_1 .inner {
    margin: 18px 0px;
}


#block-boxes-homepage_info_box h2.block-title {
    font-size: 2.4em;
}

#block-boxes-homepage_info_box p {
    font-family: Tahoma,Verdana,sans-serif;
    font-size: 1.2em;
    line-height: 1.4em;
    margin: 0 0 0.7em;
}

#block-boxes-homepage_info_box a.intro-morebutton {
    background: url("../images/intro-morebutton.png") no-repeat scroll right center transparent;
    clear: both;
    display: block;
    font-size: 1.4em;
    line-height: 18px;
    margin-right: 3%;
    padding: 9px 40px;
    text-align: right;
}

#block-boxes-homepage_info_box a.intro-morebutton, #block-boxes-homepage_info_box .intro-textblock h3 {
    border: medium none;
    color: #000000;
    font-size: 1.7em;
    font-weight: normal;
    line-height: 1.2em;
    margin-bottom: 0.2em;
    margin-top: 0;
}

/*homepage featured groups view */

.view-homepage-group-showcase .views-row {
	clear: both;
	margin: 0 0 10px 0;
	border: 1px solid #ccc;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	padding: 18px;
	zoom: 1;
}

.view-homepage-group-showcase .views-row:after,
.view-homepage-group-showcase .views-row .view-content:after {
	clear: both;
	content: ".";
	display: block;
	height: 0;
	visibility: hidden;
}

.view-homepage-group-showcase .views-row .views-field-field-group-image-fid {
	float: left;
	width: 20%;
	margin-right: 2%;
}

.view-homepage-group-showcase .views-row .views-field-field-group-image-fid img {
	width: 100%;
	height: auto;
}

.view-homepage-group-showcase .views-row .view-homepage-group-showcase.view-display-id-block_2 {
	float: left;
	width: 77%
}

.view-homepage-group-showcase .views-row table:after {
	clear: both;
}

.view-homepage-group-showcase .views-row table tr td.views-field-name {
	text-align: right;
	font-size: .8em;
}

.view-homepage-group-showcase .views-row .views-field-title {
	font-size: 1.6em;
	clear: both;
	margin: 0 0 .8em 0;
}

.view-homepage-group-showcase .views-row .views-field-title a {
	color: #000;
}

.view-homepage-group-showcase .views-row table .views-field-title {
	font-size: .9em;
}

/* global content views */

.view-recent-featured .views-exposed-widget,
.view-recent-feature .views-exposed-widget, 
.view-content-global-polls .views-exposed-widget,
.view-content-global-blogs .views-exposed-widget,
.view-content-global-documents .views-exposed-widget,
.view-content-global-discussions .views-exposed-widget,
.view-content-global-wikis .views-exposed-widget {
	width: 22%;
}

.view-recent-content-all .views-exposed-widget {
	width: 25%;
}

.view-AllRecentContent .views-field-title,
.view-recent-content-all .views-field-title {
	width: 40%;
}

/* Group content views*/

.view-og-tab-polls .views-exposed-widget,
.view-og-tab-documents .views-exposed-widget,
.view-og-tab-discussions .views-exposed-widget,
.view-og-tab-wikis .views-exposed-widget,
.view-og-calendar .views-exposed-widget,
.view-og-tab-blogs .views-exposed-widget {
	width: 30%;
}

/*user directory view*/

.view-user-directory .views-exposed-widget {
	width: 13%;
}

/*OG content tracker view */

.view-og-content-tracker .views-exposed-widget {
	width: 22%;
}

.view-homepage-group-showcase table tr td.views-field-type span.node-type,
.view-recent-featured table tr td.views-field-type span.node-type,
.view-recent-content-all table tr td.views-field-type span.node-type,
.view-og-content-tracker table tr td.views-field-type span.node-type,
.view-og-my-content table tr td.views-field-type span.node-type {
	display: block;
	height: 18px;
	text-indent: -9999px;
	width: 18px;
}

.view-recent-featured table tr td.views-field-type span.node-type {
	margin-right: 10px;
}

.view-homepage-group-showcase table tr td.views-field-type span.blog,
.view-recent-featured table tr td.views-field-type span.blog,
.view-og-content-tracker table tr td.views-field-type span.blog,
.view-recent-content-all table tr td.views-field-type span.blog,
.view-og-my-content table tr td.views-field-type span.blog {
	background: transparent url(../images/icons/blog-node.png) no-repeat center center;
}

.view-homepage-group-showcase table tr td.views-field-type span.event,
.view-recent-featured table tr td.views-field-type span.event,
.view-recent-content-all table tr td.views-field-type span.event,
.view-og-content-tracker table tr td.views-field-type span.event,
.view-og-my-content table tr td.views-field-type span.event {
	background: transparent url(../images/icons/event-node.png) no-repeat center center;
}
/* ... */

